Bug 123832 - Libre Office ver 6.2 (x64 Setup hang up while trying to install
Summary: Libre Office ver 6.2 (x64 Setup hang up while trying to install
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Installation (show other bugs)
Version:
(earliest affected)
6.2.0.3 release
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:6.3.0 target:6.2.3
Keywords:
Depends on:
Blocks: Installer-Windows
  Show dependency treegraph
 
Reported: 2019-03-04 11:58 UTC by swoidowski
Modified: 2019-04-22 12:30 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description swoidowski 2019-03-04 11:58:42 UTC
Description:
Hi,

the Setup Program of Libre Office in version 6.2 (x64) hangs while installation progress. As mentioned in the german help forum before, there are no background services which may cause this problem. My antivirus isn't causing it, cause i tried the install already with a deactivation of it, with the same result.

Steps to Reproduce:
1.Run the Libre Office_6.2.0_Win_x64.msi
2.Start the Installation
3.While trying to install the new version it will hang while install progress

Actual Results:
The Setup will hang and it can only be closed if you go via Taskmanager and kill the task.

Expected Results:
The setup should run normally without a hang.


Reproducible: Always


User Profile Reset: No



Additional Info:
Can't provide any more information while it's the setup the error occurs in.
Comment 1 Mike Kaganski 2019-03-15 20:33:48 UTC
Hi! Thank you for the report!

Could you please provide this information:

1. What OS version (including service packs, if any) is installed? Build number of Windows is available when running winver utility.
2. Please check if "wusa.exe" process is active in task manager when the install is hung. That is an OS component that is used in the installer to install a required update (KB2999226) using Windows Update service; if it's active, it would mean that it's this stage of installation process that is problematic on your system.
3. A log of the failed installation: please see FAQ [1], section "Create an installation log"; create and attach it here.

[1] https://wiki.documentfoundation.org/Faq/General/General_Installation_Issues_(Windows)
Comment 2 Mike Kaganski 2019-03-22 22:10:01 UTC
Let's gather here the available reports mentioning the hang, and use this to track a fix:

https://ask.libreoffice.org/en/question/187526
https://ask.libreoffice.org/en/question/187577
https://ask.libreoffice.org/en/question/187820

In these reports, I have identified that the problem is hung wusa.exe; and have found a likely cause and workaround [1].

A blind (since I can't reproduce it myself) patch is at https://gerrit.libreoffice.org/69487.

[1] https://superuser.com/questions/1044528/
Comment 3 Commit Notification 2019-03-22 22:58:23 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/601cc06187d20355810666547225549984b0caa4%5E%21

tdf#123832: Try to prevent/control hung wusa.exe while installing UCRT

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Mike Kaganski 2019-03-22 23:01:55 UTC
Let's call this fixed. Since I can't check it myself, this might turn out to be insufficient - in this case, please reopen this bug.
Comment 5 Commit Notification 2019-03-25 15:37:10 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/e8c9b7bf8325961b8123cf28cb32b902ed11860b%5E%21

tdf#123832: Try to prevent/control hung wusa.exe while installing UCRT

It will be available in 6.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.